--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("http://fonts.googleapis.com/css?family=Inconsolata|Lekton");
+/*@import url("http://fonts.googleapis.com/css?family=Inconsolata|Lekton");*/
 @import url("bootstrap.css");
 @import url("darkstrap.css");
 
